--- a/default_parameters.yaml
+++ b/default_parameters.yaml
@@ -26,3 +26,4 @@ default-parameters:
   num_processes: 1
   num_shadow_models: 0
   offline: False
+  edge_noise_level: 0.0 # Noisy edges for the adversary
