--- a/default_parameters.yaml
+++ b/default_parameters.yaml
@@ -28,3 +28,5 @@ default-parameters:
   offline: False
   edge_noise_level: 0.0 # Noisy edges for the adversary
   save_thresholds: false
+  target_model_path: ""
+  shadow_model_path: ""
