--- a/default_parameters.yaml
+++ b/default_parameters.yaml
@@ -31,3 +31,4 @@ default-parameters:
   target_index_start: 0
   fixed_shadow_models: false # If true, the same set of shadow models are used for all audits
   hyperparam_cross_vals: 8 # Do cross validation over a number of shadow models when tuning hyperparameters for BASE and RMIA
+  modeldir: "./trained_models"
